# qt-playground

./: .clang-format  .codeclimate.yml  .editorconfig  .gitignore  CMakeLists.txt  README.md
.github/workflows/: development.yml  master.yml
source/: CMakeLists.txt  main.cpp  mainWindow.cpp  mainWindowUi.cpp
source/include/: config.hpp.in  mainWindow.hpp  mainWindowUi.hpp  types.hpp
