CMAKE_MINIMUM_REQUIRED(VERSION 3.14 FATAL_ERROR)

PROJECT("QtPlayground" LANGUAGES CXX VERSION 0.0.1 DESCRIPTION "Qt Playground")

SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

EXECUTE_PROCESS(
  COMMAND git rev-parse --abbrev-ref HEAD
  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
  OUTPUT_VARIABLE PROJECT_COMMIT_BRANCH
  OUTPUT_STRIP_TRAILING_WHITESPACE
)

EXECUTE_PROCESS(
  COMMAND git log -1 --format=%h
  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
  OUTPUT_VARIABLE PROJECT_COMMIT_ID
  OUTPUT_STRIP_TRAILING_WHITESPACE
)

INCLUDE(GNUInstallDirs)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(CMAKE_POSITION_INDEPENDENT_CODE ON)

IF (CMAKE_SIZEOF_VOID_P EQUAL 8)
  SET(BUILD_ARCH_BITS "64")
ELSE ()
  SET(BUILD_ARCH_BITS "32")
ENDIF ()

IF (NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Debug)
ENDIF (NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

IF (NOT CMAKE_VERBOSE_MAKEFILE)
  SET(CMAKE_VERBOSE_MAKEFILE OFF)
ENDIF (NOT CMAKE_VERBOSE_MAKEFILE)

ADD_SUBDIRECTORY(
  source
)
